--- a/salary_prediction/salary_prediction.ipynb
+++ b/salary_prediction/salary_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 2: 2018 Kaggle Survey Challenge: Sallary Prediction\n",
+    "# Assignment 2: 2018 Kaggle Survey Challenge: Salary Prediction\n",
     "\n",
     "[Kaggle Survey Challenge Page](https://www.kaggle.com/kaggle/kaggle-survey-2018/home)  \n",
     "[missingno github page](https://github.com/ResidentMario/missingno)"
